--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
     body {
-      background-color: slateblue;
+      background-color: #303030;
     }
   </style>
 </head>
